# yats

./: .env.example  .gitignore  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  FIXES_SUMMARY.md  PIPELINE_CHECK.md  README.md  conftest.py  dagster.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  yats-prd.md
.claude/: hooks.json
compute/risk/: check_order.py  correlation.py  stress_test.py  tail_analysis.py
compute/stats/: adf.py  bootstrap.py  deflated_sharpe.py  pbo.py  scm_leakage.py
configs/: regime_thresholds.yml  risk.yml  shadow_allowlist.yml  vendors.yml
configs/feature_sets/: core_v1.yml  full_v1.yml  insider_v1.yml  options_v1.yml  regime_v2.yml  sweep_v1.yml  sweep_v1r.yml  sweep_v2.yml  sweep_v3.yml
configs/regime_detectors/: regime_v1_1.yml
configs/universes/: aapl.yml  dev10.yml  sp500.yml
dashboard/: __init__.py  __main__.py  api.py  queries.py
dashboard/static/: app.js  index.html
docs/: REFERENCE.md  dashboard.md  yats_for_quanto_users.ipynb
docs/research/: wfo_sweep_2d_results.md  wfo_sweep_3d_results.md  wfo_sweep_4b_results.md  wfo_sweep_alpha1_results.md
pipelines/yats_pipelines/: definitions.py
research/alpha/: __init__.py  models.py  portfolio.py  targets.py  transforms.py
research/data/: canonical_integrity.py
research/envs/: execution_simulator.py  signal_weight_env.py
research/eval/: __init__.py  attribution.py  cli.py  evaluate.py  metrics.py  regime_slicing.py  timeseries.py  wfo.py
research/execution/: __init__.py  broker_alpaca.py  heartbeat.py  kill_switch.py  live_trading.py  order_translator.py  paper_trading.py  quanttown.py  recovery.py  signal.py  state.py
research/experiments/: __init__.py  cli.py  registry.py  spec.py
research/features/: __init__.py  columns.py  cross_sectional_features.py  feature_registry.py  fundamental_features.py  insider_features_v1.py  (+5 more)
scripts/: bootstrap_db.py
src/: audit.ts  server.ts
tests/: test_dashboard_api.py  test_dashboard_frontend.py  test_dashboard_queries.py  test_kill_switch.py
(+238 files in other folders)
