[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yats"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster",
    "dagster-graphql",
    "psycopg2-binary",
    "questdb",
    "alpaca-py",
    "requests",
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    "gymnasium",
    "torch",
    "stable-baselines3",
    "pyyaml",
]

[tool.setuptools.packages.find]
include = ["pipelines*", "research*", "compute*"]

[tool.pytest.ini_options]
markers = [
    "live_db: requires a live QuestDB instance on localhost:8812",
]
