[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yats"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.12,<2.0",
    "dagster-graphql>=1.12,<2.0",
    "psycopg2-binary",
    "questdb",
    "alpaca-py",
    "requests",
    "numpy>=2.4,<3.0",
    "pandas>=3.0,<4.0",
    "scipy",
    "statsmodels",
    "gymnasium>=1.2,<2.0",
    "torch>=2.10,<3.0",
    "stable-baselines3>=2.7,<3.0",
    "pyyaml",
    "websockets>=16.0",
    "fastapi>=0.100,<1.0",
    "uvicorn>=0.20,<1.0",
    "httpx>=0.24,<1.0",
]

[tool.setuptools.packages.find]
include = ["pipelines*", "research*", "compute*", "dashboard*"]

[tool.pytest.ini_options]
markers = [
    "live_db: requires a live QuestDB instance on localhost:8812",
]
